<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guid_line" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guid_line" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_question"
            style="@style/MaterialTextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/write_your_question_here"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/group_choice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/til_question">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_single_choice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/single_choice" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_mutli_choice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/multi_choice" />
        </RadioGroup>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#FFF8EC"
            android:padding="@dimen/guid_line"
            app:layout_constraintTop_toBottomOf="@id/group_choice">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_answer"
                style="@style/MaterialTextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edittext_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/button_height"
                android:layout_marginTop="12dp"
                android:text="@string/save_answer"
                android:textAllCaps="false"
                android:enabled="false"
                app:cornerRadius="20dp"
                android:textColor="@color/text_color_selector"
                app:backgroundTint="@color/button_background_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_answer" />


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_correct_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_answer"
                app:layout_constraintBottom_toBottomOf="@id/button_add_answer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/button_add_answer" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcl_answers"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/layout_answer"
            app:layout_constraintBottom_toTopOf="@id/button_create_question"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:enabled="false"
        android:minHeight="@dimen/button_height"
        android:text="@string/create_question"
        android:textAllCaps="false"
        android:textColor="@color/text_color_selector"
        app:backgroundTint="@color/button_background_selector"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>