<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/guid_line"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_bottom_sheet">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guid_line" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guid_line" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/line_header"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:layout_marginTop="12dp"
        app:layout_constraintDimensionRatio="9.6:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line_header" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_quiz_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_header"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_quiz_name"
        style="@style/MaterialTextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/quiz_name"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_view_title">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_quiz_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:enabled="true"
        android:minHeight="@dimen/button_height"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/text_color_selector"
        app:backgroundTint="@color/button_background_selector"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/til_quiz_name"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start" />
</androidx.constraintlayout.widget.ConstraintLayout>

